--- a/config/.env
+++ b/config/.env
@@ -1,6 +1,6 @@
-DB_HOST=localhost
-DB_PORT=5432
-DB_USER=postgres
-DB_PASSWORD=postgres
-DB_NAME=beruang
-JWT_SECRET=beruang_key
+DATABASE_URL=postgresql://${{Postgres.PGUSER}}${{Postgres.PGPASSWORD}}${{Postgres.PGHOST}}${{Postgres.PGPORT}}${{Postgres.PGDATABASE}}
+PGDATABASE=railway
+PGHOST=postgres.railway.internal
+PGPASSWORD=jdtoADHKIOaFBoxSycOIlxbusLuUCTCF
+PGPORT=5432
+PGUSER=postgres
