--- a/config/.env
+++ b/config/.env
@@ -1,4 +1,4 @@
-DATABASE_URL=postgresql://${{Postgres.PGUSER}}${{Postgres.PGPASSWORD}}${{Postgres.PGHOST}}${{Postgres.PGPORT}}${{Postgres.PGDATABASE}}
+DATABASE_URL=postgresql://${{PGUSER}}${{PGPASSWORD}}${{PGHOST}}${{PGPORT}}${{PGDATABASE}}
 PGDATABASE=railway
 PGHOST=postgres.railway.internal
 PGPASSWORD=jdtoADHKIOaFBoxSycOIlxbusLuUCTCF
